--- a/Index/index.html
+++ b/Index/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="/Style/style.css">
 </head>
 <body>
     <section>
         <header>
-            <a href="#" class="logo"><img src="/src/logo.png" alt=""></a>
+            <a href="#"><img  class="logo" src="/src/logo.png" alt=""></a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
@@ -16,6 +17,24 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
+        <div class="content">
+            <div class="textBox">
+                <h2>It's not just Coffee <br>It's <span>Starbucks</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, laboriosam. Ea, quod. Facilis, enim reiciendis totam asperiores recusandae, dolore rerum, obcaecati omnis error esse laudantium autem nobis quia magni dolorem numquam. Ipsam nulla provident similique itaque illum eum rem sunt architecto. </p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="imgBox">
+                <img class="Starbucks" src="/src/img1.png" alt="">
+            </div>
+        </div>
+        <ul class="thumb">
+            <li><img src="/src/thumb1.png" alt=""></li>
+            <li><img src="/src/thumb2.png" alt=""></li>
+            <li><img src="/src/thumb3.png" alt=""></li>
+        </ul>
+        <ul class="sci">
+            <li><a href="#"><img src="" alt=""></a></li>
+        </ul>
     </section>
 </body>
 </html>
